Shenandoah: add minimum (256K) region-size stress configs to TestHumongousHash where hash-expansion humongous routing binds